--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -472,5 +472,14 @@
             android:text="Go to Activity 5"
             android:layout_below="@+id/toActivity4Button"
             android:layout_marginTop="20dp" />
+
+        <!--        firebase-->
+        <Button
+            android:id="@+id/toActivity6Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Go to Activity 6"
+            android:layout_below="@+id/toActivity5Button"
+            android:layout_marginTop="20dp" />
     </RelativeLayout>
 </ScrollView>
